gpio: add lpc18xx gpio driver
Signed-off-by: Joachim Eastwood <manabian@gmail.com>

--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -188,6 +188,14 @@ config GPIO_MOXART
 	  Select this option to enable GPIO driver for
 	  MOXA ART SoC devices.
 
+config GPIO_LPC18XX
+	bool "NXP LPC18XX/43XX GPIO support"
+	default y if ARCH_LPC18XX
+	depends on OF_GPIO && (ARCH_LPC18XX || COMPILE_TEST)
+	help
+	  Select this option to enable GPIO driver for
+	  NXP LPC18XX/43XX devices.
+
 config GPIO_MPC5200
 	def_bool y
 	depends on PPC_MPC52xx
