--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -1309,6 +1309,15 @@ config RTC_DRV_JZ4740
 	  This driver can also be buillt as a module. If so, the module
 	  will be called rtc-jz4740.
 
+config RTC_DRV_LPC24XX
+	depends on ARCH_LPC2K
+	tristate "NXP LPC2K RTC"
+	help
+	  This enables support for the NXP RTC in the LPC2K
+
+	  This driver can also be buillt as a module. If so, the module
+	  will be called rtc-lpc24xx.
+
 config RTC_DRV_LPC32XX
 	depends on ARCH_LPC32XX
 	tristate "NXP LPC32XX RTC"
