--- a/drivers/i2c/busses/Kconfig
+++ b/drivers/i2c/busses/Kconfig
@@ -531,11 +531,11 @@ config I2C_KEMPLD
 	  will be called i2c-kempld.
 
 config I2C_LPC2K
-	tristate "I2C bus support for NXP LPC2K and LPC178x targets"
-	depends on ARCH_LPC2K || ARCH_LPC178X
+	tristate "I2C bus support for NXP LPC2K/LPC178x/18xx/43xx targets"
+	depends on OF && (ARCH_LPC18XX || COMPILE_TEST)
 	help
 	  This driver supports the I2C interface in the NXP LPC2K and
-	  the NXP LPC178x/7x MCUs.
+	  the NXP LPC178x/7x MCUs and LPC18xx/43xx.
 
 	  This driver can also be built as a module.  If so, the module
 	  will be called i2c-lpc2k.
