ea4357.dts: remove clk_ignore_unused from cmd line
Signed-off-by: Joachim Eastwood <manabian@gmail.com>

--- a/arch/arm/boot/dts/lpc4357-ea4357.dts
+++ b/arch/arm/boot/dts/lpc4357-ea4357.dts
@@ -23,7 +23,7 @@
 	compatible = "ea,lpc4357-developers-kit", "nxp,lpc4357";
 
 	chosen {
-		bootargs = "console=ttyS0,115200 earlyprintk clk_ignore_unused initrd=0x28d00000,2M root=/dev/ram0 init=/linuxrc";
+		bootargs = "console=ttyS0,115200 earlyprintk initrd=0x28d00000,2M root=/dev/ram0 init=/linuxrc";
 	};
 
 	memory {
